tests/agl/rejections/scope/input_redeclared.agl
input spec
let spec = "again"
